<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_background">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="@dimen/photo_item_size"
        android:layout_height="@dimen/photo_item_size"
        android:layout_margin="@dimen/photo_item_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/label_item_photo" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivPhoto"
        android:layout_toEndOf="@+id/ivPhoto"
        android:text="@string/label_name" />

    <TextView
        android:id="@+id/tvFuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvName"
        android:layout_below="@+id/tvName"
        android:text="@string/fuel_default" />

</RelativeLayout>